postcss/testData/inspections/customSelectors/customSelectorWithInvalidTokenAt.pcss
@custom-selector <error descr="Unexpected token">@</error>;